fixed spacing issues in footer

--- a/contactStyle.css
+++ b/contactStyle.css
@@ -26,10 +26,20 @@ margin-right: 25px;
 
 /* main section */
 
-
+/* footer */
 #footer {
     display: flex;
     justify-content: center;
     margin-top: 50px;
     height: 50px;
+}
+
+.buttonDiv {
+    display: flex;
+    justify-content: center;
+    width: 200px;
+}
+
+span {
+    width: 30px;
 }
