--- a/projectsStyle.css
+++ b/projectsStyle.css
@@ -25,9 +25,20 @@ margin-right: 25px;
     box-shadow: 10px;
 }
 
+/* footer */
 #footer {
     display: flex;
     justify-content: center;
     margin-top: 50px;
     height: 50px;
+}
+
+.buttonDiv {
+    display: flex;
+    justify-content: center;
+    width: 200px;
+}
+
+span {
+    width: 30px;
 }
