--- a/resumeStylesheet.css
+++ b/resumeStylesheet.css
@@ -38,11 +38,11 @@ margin-right: 25px;
 }
 
 h2 {
-    font-size: 50px;
+    font-size: 40px;
 }
 
 #myName {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -69,9 +69,30 @@ h2 {
     margin-right: 100px;
 }
 
+#spacer {
+    background-color: black;
+    height: 1px;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* footer */
 #footer {
     display: flex;
     justify-content: center;
     margin-top: 50px;
     height: 50px;
+}
+
+.buttonDiv {
+    display: flex;
+    justify-content: center;
+    width: 200px;
+}
+
+span {
+    width: 30px;
 }
